--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   </head>
   <body>
     <ul>
-      <li> <a href="index.html"> Home <a/></li>
-      <li> <a href="appPage.html"> Apps I made! <a/></li>
+      <li> <a href = "index.html"> Home </a></li>
+      <li> <a href = "studentprojects.html"> Apps I Made! </a></li>
     
     </ul>
     <center>
