--- a/studentproject.html
+++ b/studentproject.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-        <head> <link rel="stylesheet" href="studentprojects_style.css">
+        <head> <link rel="stylesheet" href="studentproject.css">
 <link rel="icon" type="image/x-icon" href="https://e7.pngegg.com/pngimages/426/153/png-clipart-drawing-fan-art-film-megamind-face-photography.png">
 <title> Megamind's Schemes </title>
   </head>
