--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <ul>
       <li> <a href = "index.html"> Home </a></li>
-      <li> <a href = "studentprojects.html"> Apps I Made! </a></li>
+      <li> <a href = "studentproject.html"> Apps I Made! </a></li>
     
     </ul>
     <center>
