--- a/studentproject.html
+++ b/studentproject.html
@@ -2,18 +2,18 @@
   <head>
         <head> <link rel="stylesheet" href="studentproject.css">
 <link rel="icon" type="image/x-icon" href="https://e7.pngegg.com/pngimages/426/153/png-clipart-drawing-fan-art-film-megamind-face-photography.png">
-<title> Megamind's Schemes </title>
+<title> JP's project </title>
   </head>
   <body>
     <ul>
       <li> <a href = "index.html"> Home </a></li>
-      <li> <a href = "studentprojects.html"> Apps I Made! </a></li>
+      <li> <a href = "studentproject.html"> Apps I Made! </a></li>
     </ul>
     <center>
       <h2>  Student Projects </h2>
       <br>
-      <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/0bZeFkSF9MrDzIUTZHGCNSVPi0wSznS2iw7DGeeCyGw/embed?nosource"></iframe>
-      <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/EvgRyBOgNCamLqwVeWohTrupiyeIk2tehIQ1jCoCkB2/embed?nosource"></iframe>
+     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/W24b9d54abIWMWRD2oTIKdIJRX_XZbxLobOhUMCVpVd/embed?nosource"></iframe>
+     <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/ch5s6q9gLV8JXkuo8L316A9hQmRJzo3R9N14k3GPhi9/embed?nosource"></iframe>
   
   
   </html
