--- a/studentproject.html
+++ b/studentproject.html
@@ -1,7 +1,7 @@
 <html>
   <head>
         <head> <link rel="stylesheet" href="studentproject.css">
-<link rel="icon" type="image/x-icon" href="https://e7.pngegg.com/pngimages/426/153/png-clipart-drawing-fan-art-film-megamind-face-photography.png">
+<link rel="icon" type="image/x-icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Red_Panda_%2824986761703%29.jpg/1200px-Red_Panda_%2824986761703%29.jpg">
 <title> JP's project </title>
   </head>
   <body>
