--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head> 
   <head> <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="https://upload.wikimedia.org/wikipedia/commons/thumb/e/e6/Red_Panda_%2824986761703%29.jpg/1200px-Red_Panda_%2824986761703%29.jpg">
+<title> JP's project </title>
   </head>
   <body>
     <ul>
